# sunculture

./: .env.example  .gitignore  README.md  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/: Dockerfile  airflow.db  docker-compose.yml  requirements.txt  simple_auth_manager_passwords.json.generated
airflow/dags/: sunculture_retrain.py
airflow/db/: airflow.db
data/: chat_history.db  data.db
deployment/: Dockerfile  bentofile.yaml  docker-compose.yml  requirements.txt  service.py  streamlit_app.py
models/: champion_run_id.txt  features.parquet  scaler.pkl  segmentation_model.pkl  segments.parquet
notebooks/: 03_ai_self_service_poc.ipynb
notebooks/wandb/: latest-run
notebooks/wandb/run-20260523_153939-k22iht33/: run-k22iht33.wandb
notebooks/wandb/run-20260523_154011-hbyfdbs6/files/: config.yaml  requirements.txt  wandb-metadata.json
notebooks/wandb/run-20260523_154041-54is5yek/files/: config.yaml  wandb-metadata.json
notebooks/wandb/run-20260524_172324-ga4dgnxq/files/: config.yaml  wandb-metadata.json
notebooks/wandb/run-20260524_172443-af776jdo/files/: wandb-metadata.json
notebooks/wandb/run-20260524_172721-wvmpq049/files/: config.yaml  wandb-metadata.json
presentation/: Executive_Summary_SunCulture.pptx
proposals/: ai_self_service_platform.md  credit_risk_strategic_proposal.md  deployment_one_pager.md
src/: __init__.py
src/data/: loader.py  preprocessor.py
src/features/: engineering.py
src/models/: __init__.py  credit_risk.py  segmentation.py
src/viz/: __init__.py  plotting.py
tests/: test_smoke.py
(+23 files in other folders)
