[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sunculture-ds-assessment"
version = "0.1.0"
description = "Senior Data Scientist Technical Assessment — SunCulture"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "numpy>=2.1",
    "pandas>=2.2",
    "scikit-learn>=1.6",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "plotly>=5.25",
    "openpyxl>=3.1",
    "jupyter>=1.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "bentoml>=1.4",
    "mlflow>=2.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "black>=24",
    "ruff>=0.8",
    "ipykernel>=6",
]
deploy = [
    "bentoml>=1.4",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "mlflow>=2.18",
    "evidently>=0.4",
]
llm = [
    "langchain>=0.3",
    "openai>=1.55",
]
airflow = [
    "apache-airflow>=2.10",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
